<resources>
    <string name="app_name">Find My Pet</string>
    <string name="no_results">No results found</string>

    <string name="invalid_mail">Not a valid email address. Should be your@email.com</string>
    <string name="invalid_nickname">Please enter a nickname</string>
    <string name="invalid_phone_number">Please enter a phone number</string>
    <string name="invalid_password">"Invalid Password"</string>
    <string name="nickname">Nickname</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">already have account ?</string>
    <string name="VerifyPassword"> Verify Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Signing">Login</string>
    <string name="SignOut">SignOut</string>
    <string name="Boy">Boy</string>
    <string name="Girl">Girl</string>
    <string name="search_hint">Search By Pet Location </string>
    <string name="ads_id">ca-app-pub-9101652930040746/6296829934</string>
    <string name="banner_ads_id">ca-app-pub-9101652930040746/3775442526</string>


    <string name="remove">remove the post from favorite</string>
    <string name="add_favorite">add the post to favorite</string>
    <string name="pet_image">this is a pet image</string>
    <string name="profile_image">this is a profile image for the post creator</string>


    <string name="Take_pet">this image for taking pet image from gallery </string>

    <string name="find_my_pet_logo">find my pet logo </string>
    <string name="PetDescription">Pet Description</string>

    <string name="do_not_have_account">Don\'t have account ?</string>


    <string name="invalid_verify_password">"Invalid Verify Password"</string>
    <string name="ForgotPassword">Forgot Password ?</string>
    <string name="send">Send</string>
    <string name="Gender">Gender</string>

    <string name="pet_name">Pet Name</string>
    <string name="pet_age">Pet Age</string>
    <string name="Pet_Gender">Pet Gender</string>


    <string name="profile">Profile</string>
    <string name="take_image_pet">Take Pet Image</string>
    <string name="SelectYourLocation">Your Location</string>
    <string name="Post">Post</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="Conversation">Conversation</string>


    <string-array name="egypt_cities">
        <item>Alexandria</item>
        <item>Cairo</item>
        <item>Giza</item>
        <item>Shubra El-Kheima</item>
        <item>Port Said</item>
        <item>Suez</item>
        <item>Luxor</item>
        <item>Tanta</item>
        <item>Asyut</item>
        <item>Mansoura</item>
        <item>Beni Suef</item>
        <item>Zagazig</item>
        <item>Faiyum</item>
        <item>Ismailia</item>
        <item>Aswan</item>
        <item>Damanhur</item>
        <item>Minya</item>
        <item>Beni Mazar</item>
        <item>Hurghada</item>
        <item>Qena</item>
        <item>Shebin El Kom</item>
        <item>El Arish</item>
        <item>Desouk</item>
        <item>Kafr El Sheikh</item>
        <item>Mallawi</item>
        <item>El-Mahalla El-Kubra</item>
        <item>Banha</item>
        <item>Mit Ghamr</item>
        <item>Qalyub</item>
        <item>Dikirnis</item>
        <item>Akhmim</item>
        <item>Siwa</item>
        <item>Quseir</item>
        <!-- Add more cities as needed -->
    </string-array>
    <!-- res/values/strings.xml -->
    <string name="default_city">Alexandria</string>
    <string name="Pet_Details">Pet Details</string>
    <string name="pet_location">Pet Location</string>
    <string name="Hi">Hi,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">type your message here</string>
    <string name="empty_conversation">You do not have any\nchat messages yet</string>




    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>



    <string name="success_remove_post_favorite">Success remove the post from favorite</string>
    <string name="success_get_the_favorite_posts">Success get the favorite posts</string>

    <string name="success_add_post_favorite">Success add the post to favorite</string>
    <string name="success_get_posts">Success get the posts</string>
    <string name="success_get_your_posts">Success get your posts</string>

    <string name="success_add_post">Success addPost</string>
    <string name="No_new_favorite_posts">No new favorite posts</string>
    <string name="Success_delete_the_post">Success delete the post</string>
    <string name="Are_you_sure_you_want_to_delete_this_post">Are you sure you want to delete this post?</string>

    <string name="Delete_Post">Delete Post</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success_check_email">Success send please check your email</string>
    <string name="error_something_wrong">Error: Something went wrong</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="success_update_profile">Success: Profile updated successfully</string>
    <string name="please_enter_valid_name">Please enter a valid name</string>
    <string name="phone_must_be_11_number">Phone must be 11 numbers</string>
    <string name="max_post_reached_message">You have reached the maximum number of posts allowed please remove one of your posts and try again.</string>







    <string name="You_do_not_have_favorite_posts_or_need_to_refresh">"You don't have favorite posts or need to refresh"</string>

    <string name="failed_add_pet_check_internet">Failed to add the pet. Please check your internet connection: %s</string>
    <string name="max_8_images_selected">You can select a maximum of 8 images</string>
    <string name="permission_denied">Permission denied</string>
    <string name="girl_selected">GIRL Selected</string>
    <string name="boy_selected">Boy Selected</string>


    <string name="select_pet_images">Please select the pet images</string>
    <string name="enter_pet_name">Please enter pet name</string>
    <string name="enter_valid_age">Please enter a valid age (20 or less)</string>
    <string name="enter_pet_age">Please enter pet age</string>
    <string name="select_gender">Please select a gender</string>
    <string name="enter_pet_description">Please enter pet description</string>
    <string name="please_enter_a_valid_password">Please enter a valid password</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="signing_success">Signing Success</string>
    <string name="delete_post">"delete post "</string>
    <string name="network_unavailable_please_check_your_internet_connection">Network unavailable. Please check your internet connection.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="postsbyidfragment">PostsByIdFragment</string>
    <string name="allpostsfragment">AllPostsFragment</string>
    <string name="favoritefragment">FavoriteFragment</string>
    <string name="user_data_not_available_check_your_internet_connection">User data not available. Check your internet connection.</string>
    <string name="signout_success">signOut Success</string>
    <string name="user_is_signed_in">user is signed in</string>
    <string name="please_enter_a_valid_name">Please enter a valid name</string>
    <string name="password_must_be_at_least_6_characters_long">Password must be at least 6 characters long</string>
    <string name="password_confirmation_is_required">Password confirmation is required</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="phone_number_must_start_with_01_and_be_11_digits_long">Phone number must start with 01 and be 11 digits long</string>
    <string name="signup_success">SignUP Success</string>
    <string name="please_enter_a_message">Please enter a message</string>
    <string name="girl">Girl</string>
    <string name="boy">Boy</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_delete_your_account">are you sure you want to delete your account</string>
    <string name="account_deleted_successfully">account_deleted_successfully</string>
    <string name="error_deleting_account">error_deleting_account</string>

</resources>